2014-01-02  Marc Glisse  <marc.glisse@inria.fr>

	* call.c (convert_like_real): Check complain.

2014-01-02  Marc Glisse  <marc.glisse@inria.fr>

	PR c++/59378
	* typeck.c (build_x_vec_perm_expr): Handle non-dependent arguments
	in templates.

2014-01-02  Richard Sandiford  <rdsandiford@googlemail.com>

	Update copyright years

2014-01-02  Richard Sandiford  <rdsandiford@googlemail.com>

	* cp-array-notation.c, cp-cilkplus.c, vtable-class-hierarchy.c: Use
	the standard form for the copyright notice.

2013-12-23  Jason Merrill  <jason@redhat.com>

	PR c++/59271
	* lambda.c (build_capture_proxy): Use build_cplus_array_type.

	PR c++/59349
	* parser.c (cp_parser_lambda_introducer): Handle empty init.

2013-12-23  Stuart Hastings <stuart@apple.com>
	    Bill Maddox  <maddox@google.com>
	    Jason Merrill  <jason@redhat.com>

	PR c++/41090
	* optimize.c (can_alias_cdtor, populate_clone_array): Split out
	from maybe_clone_body.
	(maybe_thunk_body): New function.
	(maybe_clone_body): Call it.
	* mangle.c (write_mangled_name): Remove code to suppress
	writing of mangled name for cloned constructor or destructor.
	(write_special_name_constructor): Handle decloned constructor.
	(write_special_name_destructor): Handle decloned destructor.
	* method.c (trivial_fn_p): Handle decloning.
	* semantics.c (expand_or_defer_fn_1): Clone after setting linkage.

2013-12-23  Marek Polacek  <polacek@redhat.com>

	PR c++/59111
	* search.c (lookup_conversions): Return NULL_TREE if !CLASS_TYPE_P.

2013-12-20  Trevor saunders  <tsaunders@mozilla.com>

	* semantics.c (build_anon_member_initialization): Replace
	stack_vec<T, N> with auto_vec<T, N>.

2013-12-18  Balaji V. Iyer  <balaji.v.iyer@intel.com>

	* parser.c (cp_parser_cilk_simd_clause_name): Changed cilk_clause_name
	to omp_clause_name.

2013-12-17  Thomas Schwinge  <thomas@codesourcery.com>

	* parser.c (cp_parser_omp_parallel): Fix description.

2013-12-12  Jason Merrill  <jason@redhat.com>

	PR c++/58954